--- a/app/src/main/res/layout/custom_description_catalog.xml
+++ b/app/src/main/res/layout/custom_description_catalog.xml
@@ -22,14 +22,43 @@
         android:background="@color/white_color"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/image_catalog_custom"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:adjustViewBounds="true"
-            android:maxHeight="300dp"
-            android:scaleType="centerCrop" />
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/image_catalog_custom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:adjustViewBounds="true"
+                android:maxHeight="300dp"
+                android:scaleType="centerCrop" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="5dp"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/image_button_edit_catalog_custom"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:background="@drawable/ic_edit_blue"
+                    android:visibility="gone" />
+
+                <ImageButton
+                    android:id="@+id/image_button_delete_catalog_custom"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_delete_blue"
+                    android:visibility="gone" />
+            </LinearLayout>
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/text_title_catalog_custom"
