--- a/app/src/main/res/layout/fragment_example_thread.xml
+++ b/app/src/main/res/layout/fragment_example_thread.xml
@@ -23,7 +23,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/sniglet_reguler"
-                android:text="Contoh Tampilan Thread"
+                android:text="Contoh Tampilan Forum"
                 android:textAlignment="center"
                 android:textColor="@color/blackPalette"
                 android:textSize="25sp" />
