--- a/app/src/main/res/layout/fragment_main_forum.xml
+++ b/app/src/main/res/layout/fragment_main_forum.xml
@@ -85,7 +85,6 @@
                             android:textColor="@color/blackPalette"
                             android:textSize="10sp" />
                     </LinearLayout>
-
                 </LinearLayout>
 
                 <View
@@ -226,6 +225,13 @@
         android:visibility="gone"
         android:layout_height="match_parent"/>
 
+    <View
+        android:id="@+id/view_blur_main_forum"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.3"
+        android:background="@color/blackPalette"
+        android:visibility="gone" />
     <include
         android:id="@+id/bottom_sheet_main"
         layout="@layout/bottom_sheet_category" />
