--- a/app/src/main/res/layout/fragment_selected_thread.xml
+++ b/app/src/main/res/layout/fragment_selected_thread.xml
@@ -23,6 +23,7 @@
                 android:id="@+id/img_btn_back_selected_thread"
                 android:layout_width="40dp"
                 android:layout_height="30dp"
+                android:layout_marginStart="10dp"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:background="@drawable/ic_back" />
@@ -31,7 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"
+                android:layout_centerVertical="true"
                 android:fontFamily="@font/sniglet_font"
                 android:text="@string/menu_forum"
                 android:textColor="@color/blackPalette"
@@ -41,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_marginTop="10dp"
+                android:layout_centerVertical="true"
                 android:layout_marginEnd="10dp"
                 android:gravity="center"
                 android:orientation="vertical">
